<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red_light"
    tools:context=".BeratIdeal.BeratIdealActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menghitung_berat_ideal"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:fontFamily="monospace"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tinggi"
                android:textColor="#ffdd00"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_home_menu"
                android:hint="CM"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/edt_tinggi_berat_ideal"
                android:inputType="number"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/berat"
                android:textColor="#ffdd00"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/bg_home_menu"
                android:hint="KG"
                android:textSize="20sp"
                android:textAlignment="center"
                android:id="@+id/edt_berat_berat_ideal"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_blue_light"
        android:id="@+id/btn_hitung_berat_ideal"
        android:text="Hitung" />
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_berat_ideal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="casual"
            android:text="@string/hasil_perhitungan"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indeks_massa_tubuh"
            android:textColor="@color/blue_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:layout_marginLeft="10dp"
            />

        <TextView
            android:id="@+id/tvw_imt_hasil"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/dark_grey" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Berat Ideal Pria"
            android:textColor="@color/blue_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/dark_grey"
            android:layout_marginBottom="10dp"
            android:id="@+id/tvw_berat_ideal_pria_hasil"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Berat Ideal Wanita"
            android:textColor="@color/blue_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textColor="@color/dark_grey"
            android:layout_marginBottom="10dp"
            android:id="@+id/tvw_berat_ideal_wanita_hasil"/>

        <ImageButton
            android:id="@+id/imgbtn_home_berat_ideal"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:src="@drawable/ic_baseline_home_24"/>
    </LinearLayout>
</LinearLayout>