<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bg_home"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SMALL PROJECT"
                android:textColor="@android:color/white"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oleh Mokhamad Wildan Marzuqon"
                android:textColor="@android:color/white"
                android:fontFamily="serif-monospace"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_wald" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:layout_marginTop="-80dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvw_berat_ideal"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            card_view:cardBackgroundColor="@color/grey_light"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/home_timbangan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/berat_ideal"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvw_bangun_datar"
            android:layout_marginRight="20dp"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            card_view:cardBackgroundColor="@color/grey_light"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/home_bangun_datar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/bangun_datar"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvw_bangun_ruang"
            android:layout_width="120dp"
            android:layout_height="150dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            card_view:cardBackgroundColor="@color/grey_light"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/home_bangun_ruang" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/bangun_ruang"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvw_konversi_suhu"
            android:layout_width="120dp"
            android:layout_marginRight="20dp"
            android:layout_height="150dp"
            android:layout_marginLeft="20dp"
            card_view:cardBackgroundColor="@color/grey_light"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/home_suhu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/konversi_suhu"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvw_konversi_nilai"
            android:layout_width="120dp"
            android:layout_height="150dp"
            card_view:cardBackgroundColor="@color/grey_light"
            card_view:cardCornerRadius="20dp"
            card_view:cardElevation="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:src="@drawable/home_nilai" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/konversi_nilai"
                android:textColor="@android:color/black"
                android:textSize="17sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>