<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".KonversiNilai.KonversiNilaiActivity"
    android:background="@color/red_light">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_close_24"
        android:background="@color/red_light"
        android:layout_gravity="right"
        android:id="@+id/btn_close_konversi_nilai"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"/>
    <LinearLayout
        android:layout_width="800dp"
        android:layout_height="420dp"
        android:background="@drawable/bg_konversi_nilai"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/konversi_nilai"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Angka -> Huruf"
            android:layout_gravity="center"
            android:textSize="15sp"/>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="270dp"
            android:layout_height="240dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            card_view:cardElevation="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <EditText
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/nilai_partisipasi"
                    android:inputType="number"
                    android:id="@+id/edt_nilai_partisipasi_konversi_nilai"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/nilai_kehadiran"
                    android:inputType="number"
                    android:id="@+id/edt_nilai_kehadiran_konversi_nilai"/>
                <EditText
                    android:layout_width="200dp"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/nilai_tugas_amp_tugas"
                    android:inputType="number"
                    android:id="@+id/edt_nilai_tugas_konversi_nilai"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30% : Kehadiran"
                        android:layout_marginEnd="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="40% : Ujian &amp; Tugas"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30% : Partisipasi"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:id="@+id/btn_koversi_nilai"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_circle"
            android:elevation="10dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_arrow_downward_24" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_circle">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="70sp"
                    android:hint="0"
                    android:textColor="@color/red_dark"
                    android:layout_gravity="center"
                    android:id="@+id/tvw_nilai_angka_konversi_nilai"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nilai Angka"
                    android:textColor="@color/red_dark"
                    android:textSize="17sp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_compare_arrows_24"
            android:layout_marginTop="60dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_circle"
            android:layout_marginStart="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="70sp"
                    android:hint="E"
                    android:textColor="@color/red_dark"
                    android:layout_gravity="center"
                    android:id="@+id/tvw_nilai_huruf_konversi_nilai"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nilai Huruf"
                    android:textColor="@color/red_dark"
                    android:textSize="17sp"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>